victory-message-update

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎮 Tile Match Game</h1>
+            <h1>Tile Match Game</h1>
             <div class="stats">
                 <div class="stat">⏱️ Time: <span id="timer">0</span>s</div>
                 <div class="stat">🔄 Moves: <span id="moves">0</span></div>
@@ -235,7 +235,7 @@
 
     <div class="victory-modal" id="victoryModal">
         <div class="victory-content">
-            <h2>🎉 You Won!</h2>
+            <h2>🎉 You aced it!</h2>
             <p id="victoryMessage"></p>
             <button class="btn" onclick="resetGame()">Play Again</button>
         </div>
